@@ -17,25 +17,31 @@
 package io.delta.kernel.internal.snapshot;
 
 import static io.delta.kernel.internal.DeltaErrors.wrapEngineExceptionThrowsIO;
+import static io.delta.kernel.internal.TableConfig.EXPIRED_LOG_CLEANUP_ENABLED;
+import static io.delta.kernel.internal.TableConfig.LOG_RETENTION;
 import static io.delta.kernel.internal.TableFeatures.validateWriteSupportedTable;
 import static io.delta.kernel.internal.checkpoints.Checkpointer.findLastCompleteCheckpointBefore;
 import static io.delta.kernel.internal.fs.Path.getName;
 import static io.delta.kernel.internal.replay.LogReplayUtils.assertLogFilesBelongToTable;
+import static io.delta.kernel.internal.snapshot.MetadataCleanup.cleanupExpiredLogs;
 import static io.delta.kernel.internal.util.Preconditions.checkArgument;
 import static java.lang.String.format;
 
 import io.delta.kernel.*;
 import io.delta.kernel.engine.Engine;
-import io.delta.kernel.engine.coordinatedcommits.Commit;
 import io.delta.kernel.exceptions.CheckpointAlreadyExistsException;
 import io.delta.kernel.exceptions.InvalidTableException;
 import io.delta.kernel.exceptions.TableNotFoundException;
 import io.delta.kernel.internal.*;
+import io.delta.kernel.internal.actions.Metadata;
+import io.delta.kernel.internal.annotation.VisibleForTesting;
 import io.delta.kernel.internal.checkpoints.*;
 import io.delta.kernel.internal.fs.Path;
 import io.delta.kernel.internal.lang.ListUtils;
+import io.delta.kernel.internal.metrics.SnapshotQueryContext;
 import io.delta.kernel.internal.replay.CreateCheckpointIterator;
 import io.delta.kernel.internal.replay.LogReplay;
+import io.delta.kernel.internal.util.Clock;
 import io.delta.kernel.internal.util.FileNames;
 import io.delta.kernel.internal.util.Tuple2;
 import io.delta.kernel.utils.CloseableIterator;
@@ -43,11 +49,9 @@ import io.delta.kernel.utils.FileStatus;
 import java.io.*;
 import java.nio.file.FileAlreadyExistsException;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.LongStream;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -75,48 +79,15 @@ public class SnapshotManager {
   /////////////////
 
   /**
-   * - Verify the versions are contiguous. - Verify the versions start with `expectedStartVersion`
-   * if it's specified. - Verify the versions end with `expectedEndVersion` if it's specified.
-   */
-  public static void verifyDeltaVersions(
-      List<Long> versions,
-      Optional<Long> expectedStartVersion,
-      Optional<Long> expectedEndVersion,
-      Path tablePath) {
-    if (!versions.isEmpty()) {
-      List<Long> contVersions =
-          LongStream.rangeClosed(versions.get(0), versions.get(versions.size() - 1))
-              .boxed()
-              .collect(Collectors.toList());
-      if (!contVersions.equals(versions)) {
-        throw new InvalidTableException(
-            tablePath.toString(),
-            String.format("Missing delta files: versions are not continuous: (%s)", versions));
-      }
-    }
-    expectedStartVersion.ifPresent(
-        v -> {
-          checkArgument(
-              !versions.isEmpty() && Objects.equals(versions.get(0), v),
-              format("Did not get the first delta file version %s to compute Snapshot", v));
-        });
-    expectedEndVersion.ifPresent(
-        v -> {
-          checkArgument(
-              !versions.isEmpty() && Objects.equals(versions.get(versions.size() - 1), v),
-              format("Did not get the last delta file version %s to compute Snapshot", v));
-        });
-  }
-
-  /**
    * Construct the latest snapshot for given table.
    *
    * @param engine Instance of {@link Engine} to use.
    * @return
    * @throws TableNotFoundException
    */
-  public Snapshot buildLatestSnapshot(Engine engine) throws TableNotFoundException {
-    return getSnapshotAtInit(engine);
+  public Snapshot buildLatestSnapshot(Engine engine, SnapshotQueryContext snapshotContext)
+      throws TableNotFoundException {
+    return getSnapshotAtInit(engine, snapshotContext);
   }
 
   /**
@@ -127,33 +98,18 @@ public class SnapshotManager {
    * @return a {@link Snapshot} of the table at version {@code version}
    * @throws TableNotFoundException
    */
-  public Snapshot getSnapshotAt(Engine engine, long version) throws TableNotFoundException {
+  public Snapshot getSnapshotAt(Engine engine, long version, SnapshotQueryContext snapshotContext)
+      throws TableNotFoundException {
 
     Optional<LogSegment> logSegmentOpt =
-        getLogSegmentAtOrBeforeVersion(
+        getLogSegmentForVersion(
             engine,
             Optional.empty(), /* startCheckpointOpt */
-            Optional.of(version) /* versionToLoadOpt */,
-            Optional.empty() /* tableCommitHandlerOpt */);
+            Optional.of(version) /* versionToLoadOpt */);
 
-    // For non-coordinated commit table, the {@code getCoodinatedCommitsAwareSnapshot} will
-    // create the snapshot with the {@code logSegmentOpt} built here and will not trigger other
-    // operations. For coordinated commit table, the {@code getCoodinatedCommitsAwareSnapshot}
-    // will create the snapshot with the {@code logSegmentOpt} built here and will build the
-    // logSegment again by also fetching the unbackfilled commits from the commit coordinator.
-    // With the unbackfilled commits plus the backfilled commits in Delta log, a new snapshot
-    // will be created.
-    SnapshotImpl snapshot =
-        logSegmentOpt
-            .map(
-                logSegment ->
-                    getCoordinatedCommitsAwareSnapshot(engine, logSegment, Optional.of(version)))
-            .orElseThrow(() -> new TableNotFoundException(tablePath.toString()));
-    long snapshotVer = snapshot.getVersion(engine);
-    if (snapshotVer != version) {
-      throw DeltaErrors.versionAfterLatestCommit(tablePath.toString(), version, snapshotVer);
-    }
-    return snapshot;
+    return logSegmentOpt
+        .map(logSegment -> createSnapshot(logSegment, engine, snapshotContext))
+        .orElseThrow(() -> new TableNotFoundException(tablePath.toString()));
   }
 
   /**
@@ -165,24 +121,44 @@ public class SnapshotManager {
    * @return a {@link Snapshot} of the table at the provided timestamp
    * @throws TableNotFoundException
    */
-  public Snapshot getSnapshotForTimestamp(Engine engine, long millisSinceEpochUTC)
+  public Snapshot getSnapshotForTimestamp(
+      Engine engine, long millisSinceEpochUTC, SnapshotQueryContext snapshotContext)
       throws TableNotFoundException {
-    long startTimeMillis = System.currentTimeMillis();
     long versionToRead =
-        DeltaHistoryManager.getActiveCommitAtTimestamp(engine, logPath, millisSinceEpochUTC);
+        snapshotContext
+            .getSnapshotMetrics()
+            .timestampToVersionResolutionTimer
+            .time(
+                () ->
+                    DeltaHistoryManager.getActiveCommitAtTimestamp(
+                            engine,
+                            logPath,
+                            millisSinceEpochUTC,
+                            true /* mustBeRecreatable */,
+                            false /* canReturnLastCommit */,
+                            false /* canReturnEarliestCommit */)
+                        .getVersion());
     logger.info(
-        "{}: Took {}ms to fetch version at timestamp {}",
+        "{}: Took {} ms to fetch version at timestamp {}",
         tablePath,
-        System.currentTimeMillis() - startTimeMillis,
+        snapshotContext.getSnapshotMetrics().timestampToVersionResolutionTimer.totalDurationMs(),
         millisSinceEpochUTC);
+    // We update the query context version as soon as we resolve timestamp --> version
+    snapshotContext.setVersion(versionToRead);
 
-    return getSnapshotAt(engine, versionToRead);
+    return getSnapshotAt(engine, versionToRead, snapshotContext);
   }
 
-  public void checkpoint(Engine engine, long version) throws TableNotFoundException, IOException {
+  public void checkpoint(Engine engine, Clock clock, long version)
+      throws TableNotFoundException, IOException {
     logger.info("{}: Starting checkpoint for version: {}", tablePath, version);
     // Get the snapshot corresponding the version
-    SnapshotImpl snapshot = (SnapshotImpl) getSnapshotAt(engine, version);
+    SnapshotImpl snapshot =
+        (SnapshotImpl)
+            getSnapshotAt(
+                engine,
+                version,
+                SnapshotQueryContext.forVersionSnapshot(tablePath.toString(), version));
 
     // Check if writing to the given table protocol version/features is supported in Kernel
     validateWriteSupportedTable(
@@ -224,11 +200,56 @@ public class SnapshotManager {
     logger.info("{}: Last checkpoint metadata file is written for version: {}", tablePath, version);
 
     logger.info("{}: Finished checkpoint for version: {}", tablePath, version);
+
+    // Clean up delta log files if enabled.
+    Metadata metadata = snapshot.getMetadata();
+    if (EXPIRED_LOG_CLEANUP_ENABLED.fromMetadata(metadata)) {
+      cleanupExpiredLogs(engine, clock, tablePath, LOG_RETENTION.fromMetadata(metadata));
+    } else {
+      logger.info(
+          "{}: Log cleanup is disabled. Skipping the deletion of expired log files", tablePath);
+    }
   }
 
   ////////////////////
   // Helper Methods //
   ////////////////////
+
+  /**
+   * Given a list of delta versions, verifies that they are (1) contiguous, (2) start with
+   * expectedStartVersion (if provided), and (3) end with expectedEndVersionOpt (if provided).
+   * Throws an exception if any of these are not true.
+   *
+   * @param versions List of versions in sorted increasing order according
+   */
+  @VisibleForTesting
+  public static void verifyDeltaVersions(
+      List<Long> versions,
+      Optional<Long> expectedStartVersion,
+      Optional<Long> expectedEndVersion,
+      Path tablePath) {
+    for (int i = 1; i < versions.size(); i++) {
+      if (versions.get(i) != versions.get(i - 1) + 1) {
+        throw new InvalidTableException(
+            tablePath.toString(),
+            String.format("Missing delta files: versions are not contiguous: (%s)", versions));
+      }
+    }
+    expectedStartVersion.ifPresent(
+        v -> {
+          checkArgument(
+              !versions.isEmpty() && Objects.equals(versions.get(0), v),
+              "Did not get the first delta file version %s to compute Snapshot",
+              v);
+        });
+    expectedEndVersion.ifPresent(
+        v -> {
+          checkArgument(
+              !versions.isEmpty() && Objects.equals(ListUtils.getLast(versions), v),
+              "Did not get the last delta file version %s to compute Snapshot",
+              v);
+        });
+  }
 
   /**
    * Updates the current `latestSnapshotHint` with the `newHint` if and only if the newHint is newer
@@ -298,53 +319,22 @@ public class SnapshotManager {
    * @param startVersion the version to start. Inclusive.
    * @param versionToLoad the optional parameter to set the max version we should return. Inclusive.
    *     Must be >= startVersion if provided.
-   *     <p>This method lists all delta files and checkpoint files with the following steps:
-   *     <ul>
-   *       <li>When the table is set up with a commit coordinator, retrieve any files that haven't
-   *           been backfilled by initiating a request to the commit coordinator service. If the
-   *           table is not configured to use a commit coordinator, this list will be empty.
-   *       <li>Collect commit files (aka backfilled commits) and checkpoint files by listing the
-   *           contents of the Delta log on storage.
-   *       <li>Filter un-backfilled files to exclude overlapping delta files collected from both
-   *           commit-coordinator and file-system to avoid duplicates.
-   *       <li>Merge and return the backfilled files and filtered un-backfilled files.
-   *     </ul>
-   *     <p>*Note*: If table is a coordinated-commits table, the commit-coordinator client MUST be
-   *     passed to correctly list the commits.
-   * @param startVersion the version to start. Inclusive.
-   * @param versionToLoad the optional parameter to set the max version we should return. Inclusive.
-   *     Must be >= startVersion if provided.
-   * @param tableCommitHandlerOpt the optional commit-coordinator client handler to use for fetching
-   *     un-backfilled commits.
    * @return Some array of files found (possibly empty, if no usable commit files are present), or
    *     None if the listing returned no files at all.
    */
   protected final Optional<List<FileStatus>> listDeltaAndCheckpointFiles(
-      Engine engine,
-      long startVersion,
-      Optional<Long> versionToLoad,
-      Optional<TableCommitCoordinatorClientHandler> tableCommitHandlerOpt) {
+      Engine engine, long startVersion, Optional<Long> versionToLoad) {
     versionToLoad.ifPresent(
         v ->
             checkArgument(
                 v >= startVersion,
-                format("versionToLoad=%s provided is less than startVersion=%s", v, startVersion)));
-    logger.debug(
-        "startVersion: {}, versionToLoad: {}, coordinated commits enabled: {}",
-        startVersion,
-        versionToLoad,
-        tableCommitHandlerOpt.isPresent());
+                "versionToLoad=%s provided is less than startVersion=%s",
+                v,
+                startVersion));
+    logger.debug("startVersion: {}, versionToLoad: {}", startVersion, versionToLoad);
 
-    // Fetching the unbackfilled commits before doing the log directory listing to avoid a gap
-    // in delta versions if some delta files are backfilled after the log directory listing but
-    // before the unbackfilled commits listing
-    List<Commit> unbackfilledCommits =
-        getUnbackfilledCommits(tableCommitHandlerOpt, startVersion, versionToLoad);
-
-    final AtomicLong maxDeltaVersionSeen = new AtomicLong(startVersion - 1);
-    Optional<CloseableIterator<FileStatus>> listing = listFromOrNone(engine, startVersion);
-    Optional<List<FileStatus>> resultFromFsListingOpt =
-        listing.map(
+    return listFromOrNone(engine, startVersion)
+        .map(
             fileStatusesIter -> {
               final List<FileStatus> output = new ArrayList<>();
 
@@ -380,71 +370,19 @@ public class SnapshotManager {
                   }
                   break;
                 }
-
-                // Ideally listFromOrNone should return lexiographically sorted
-                // files and so maxDeltaVersionSeen should be equal to fileVersion.
-                // But we are being defensive here and taking max of all the
-                // fileVersions seen.
-                if (FileNames.isCommitFile(fileName)) {
-                  maxDeltaVersionSeen.set(
-                      Math.max(
-                          maxDeltaVersionSeen.get(), FileNames.deltaVersion(fileStatus.getPath())));
-                }
                 output.add(fileStatus);
               }
 
               return output;
             });
-
-    if (!tableCommitHandlerOpt.isPresent()) {
-      return resultFromFsListingOpt;
-    }
-    List<FileStatus> relevantUnbackfilledCommits =
-        unbackfilledCommits.stream()
-            .filter((commit) -> commit.getVersion() > maxDeltaVersionSeen.get())
-            .filter(
-                (commit) ->
-                    !versionToLoad.isPresent() || commit.getVersion() <= versionToLoad.get())
-            .map(Commit::getFileStatus)
-            .collect(Collectors.toList());
-
-    return resultFromFsListingOpt.map(
-        fsListing -> {
-          fsListing.addAll(relevantUnbackfilledCommits);
-          return fsListing;
-        });
-  }
-
-  private List<Commit> getUnbackfilledCommits(
-      Optional<TableCommitCoordinatorClientHandler> tableCommitHandlerOpt,
-      long startVersion,
-      Optional<Long> versionToLoad) {
-    try {
-      return tableCommitHandlerOpt
-          .map(
-              commitCoordinatorClientHandler -> {
-                logger.info(
-                    "Getting un-backfilled commits from commit coordinator for " + "table: {}",
-                    tablePath);
-                return commitCoordinatorClientHandler
-                    .getCommits(startVersion, versionToLoad.orElse(null))
-                    .getCommits();
-              })
-          .orElse(Collections.emptyList());
-    } catch (Exception e) {
-      logger.error(
-          "Failed to get unbackfilled commits of table {} with commit coordinator: {}",
-          tablePath,
-          e);
-      throw e;
-    }
   }
 
   /**
    * Load the Snapshot for this Delta table at initialization. This method uses the `lastCheckpoint`
    * file as a hint on where to start listing the transaction log directory.
    */
-  private SnapshotImpl getSnapshotAtInit(Engine engine) throws TableNotFoundException {
+  private SnapshotImpl getSnapshotAtInit(Engine engine, SnapshotQueryContext snapshotContext)
+      throws TableNotFoundException {
     Checkpointer checkpointer = new Checkpointer(logPath);
     Optional<CheckpointMetaData> lastCheckpointOpt = checkpointer.readLastCheckpointFile(engine);
     if (!lastCheckpointOpt.isPresent()) {
@@ -454,50 +392,25 @@ public class SnapshotManager {
           tablePath);
     }
     Optional<LogSegment> logSegmentOpt = getLogSegmentFrom(engine, lastCheckpointOpt);
+    // We update the query context version with the resolved version from the log segment listing
+    // if it exists
+    logSegmentOpt.ifPresent(logSegment -> snapshotContext.setVersion(logSegment.version));
 
     return logSegmentOpt
-        .map(logSegment -> getCoordinatedCommitsAwareSnapshot(engine, logSegment, Optional.empty()))
+        .map(logSegment -> createSnapshot(logSegment, engine, snapshotContext))
         .orElseThrow(() -> new TableNotFoundException(tablePath.toString()));
   }
 
-  /**
-   * This can be optimized by making snapshot hint optimization to work with coordinated commits.
-   *
-   * @see <a href="https://github.com/delta-io/delta/issues/3437">issue #3437</a>.
-   */
-  private SnapshotImpl getCoordinatedCommitsAwareSnapshot(
-      Engine engine, LogSegment initialSegmentForNewSnapshot, Optional<Long> versionToLoadOpt) {
-    SnapshotImpl newSnapshot = createSnapshot(initialSegmentForNewSnapshot, engine);
-
-    if (versionToLoadOpt.isPresent() && newSnapshot.getVersion(engine) == versionToLoadOpt.get()) {
-      return newSnapshot;
-    }
-
-    Optional<TableCommitCoordinatorClientHandler> newTableCommitCoordinatorClientHandlerOpt =
-        newSnapshot.getTableCommitCoordinatorClientHandlerOpt(engine);
-
-    if (newTableCommitCoordinatorClientHandlerOpt.isPresent()) {
-      Optional<LogSegment> segmentOpt =
-          getLogSegmentAtOrBeforeVersion(
-              engine,
-              newSnapshot.getLogSegment().checkpointVersionOpt, /* startCheckpointOpt */
-              versionToLoadOpt /* versionToLoadOpt */,
-              newTableCommitCoordinatorClientHandlerOpt /* tableCommitHandlerOpt */);
-      newSnapshot =
-          segmentOpt
-              .map(segment -> createSnapshot(segment, engine))
-              .orElseThrow(() -> new TableNotFoundException(tablePath.toString()));
-    }
-    return newSnapshot;
-  }
-
-  private SnapshotImpl createSnapshot(LogSegment initSegment, Engine engine) {
+  private SnapshotImpl createSnapshot(
+      LogSegment initSegment, Engine engine, SnapshotQueryContext snapshotContext) {
     final String startingFromStr =
         initSegment
             .checkpointVersionOpt
             .map(v -> format("starting from checkpoint version %s.", v))
             .orElse(".");
     logger.info("{}: Loading version {} {}", tablePath, initSegment.version, startingFromStr);
+
+    long startTimeMillis = System.currentTimeMillis();
 
     LogReplay logReplay =
         new LogReplay(
@@ -506,15 +419,22 @@ public class SnapshotManager {
             initSegment.version,
             engine,
             initSegment,
-            Optional.ofNullable(latestSnapshotHint.get()));
-
-    long startTimeMillis = System.currentTimeMillis();
+            Optional.ofNullable(latestSnapshotHint.get()),
+            snapshotContext.getSnapshotMetrics());
 
     assertLogFilesBelongToTable(logPath, initSegment.allLogFilesUnsorted());
 
     final SnapshotImpl snapshot =
         new SnapshotImpl(
-            tablePath, initSegment, logReplay, logReplay.getProtocol(), logReplay.getMetadata());
+            tablePath,
+            initSegment,
+            logReplay,
+            logReplay.getProtocol(),
+            logReplay.getMetadata(),
+            snapshotContext);
+
+    // Push snapshot report to engine
+    engine.getMetricsReporters().forEach(reporter -> reporter.report(snapshot.getSnapshotReport()));
 
     logger.info(
         "{}: Took {}ms to construct the snapshot (loading protocol and metadata) for {} {}",
@@ -540,31 +460,26 @@ public class SnapshotManager {
    */
   private Optional<LogSegment> getLogSegmentFrom(
       Engine engine, Optional<CheckpointMetaData> startingCheckpoint) {
-    return getLogSegmentAtOrBeforeVersion(
-        engine, startingCheckpoint.map(x -> x.version), Optional.empty(), Optional.empty());
+    return getLogSegmentForVersion(
+        engine, startingCheckpoint.map(x -> x.version), Optional.empty());
   }
 
   /**
-   * Get a list of files that can be used to compute a Snapshot at or before version
-   * `versionToLoad`, If `versionToLoad` is not provided, will generate the list of files that are
-   * needed to load the latest version of the Delta table. This method also performs checks to
-   * ensure that the delta files are contiguous.
+   * Get a list of files that can be used to compute a Snapshot at version `versionToLoad`, if
+   * `versionToLoad` is not provided, will generate the list of files that are needed to load the
+   * latest version of the Delta table. This method also performs checks to ensure that the delta
+   * files are contiguous.
    *
    * @param startCheckpoint A potential start version to perform the listing of the DeltaLog,
    *     typically that of a known checkpoint. If this version's not provided, we will start listing
    *     from version 0.
-   * @param versionToLoad A specific version we try to load, but we may only load a version before
-   *     this version if this version of commit is un-backfilled. Typically used with time travel
-   *     and the Delta streaming source. If not provided, we will try to load the latest version of
-   *     the table.
+   * @param versionToLoad A specific version to load. Typically used with time travel and the Delta
+   *     streaming source. If not provided, we will try to load the latest version of the table.
    * @return Some LogSegment to build a Snapshot if files do exist after the given startCheckpoint.
    *     None, if the delta log directory was missing or empty.
    */
-  protected Optional<LogSegment> getLogSegmentAtOrBeforeVersion(
-      Engine engine,
-      Optional<Long> startCheckpoint,
-      Optional<Long> versionToLoad,
-      Optional<TableCommitCoordinatorClientHandler> tableCommitHandlerOpt) {
+  public Optional<LogSegment> getLogSegmentForVersion(
+      Engine engine, Optional<Long> startCheckpoint, Optional<Long> versionToLoad) {
     // Only use startCheckpoint if it is <= versionToLoad
     Optional<Long> startCheckpointToUse =
         startCheckpoint.filter(v -> !versionToLoad.isPresent() || v <= versionToLoad.get());
@@ -594,7 +509,7 @@ public class SnapshotManager {
 
     long startTimeMillis = System.currentTimeMillis();
     final Optional<List<FileStatus>> newFiles =
-        listDeltaAndCheckpointFiles(engine, startVersion, versionToLoad, tableCommitHandlerOpt);
+        listDeltaAndCheckpointFiles(engine, startVersion, versionToLoad);
     logger.info(
         "{}: Took {}ms to list the files after starting checkpoint",
         tablePath,
@@ -602,8 +517,7 @@ public class SnapshotManager {
 
     startTimeMillis = System.currentTimeMillis();
     try {
-      return getLogSegmentAtOrBeforeVersion(
-          engine, startCheckpointToUse, versionToLoad, newFiles, tableCommitHandlerOpt);
+      return getLogSegmentForVersion(engine, startCheckpointToUse, versionToLoad, newFiles);
     } finally {
       logger.info(
           "{}: Took {}ms to construct a log segment",
@@ -616,12 +530,11 @@ public class SnapshotManager {
    * Helper function for the getLogSegmentForVersion above. Called with a provided files list, and
    * will then try to construct a new LogSegment using that.
    */
-  protected Optional<LogSegment> getLogSegmentAtOrBeforeVersion(
+  protected Optional<LogSegment> getLogSegmentForVersion(
       Engine engine,
       Optional<Long> startCheckpointOpt,
       Optional<Long> versionToLoadOpt,
-      Optional<List<FileStatus>> filesOpt,
-      Optional<TableCommitCoordinatorClientHandler> tableCommitHandlerOpt) {
+      Optional<List<FileStatus>> filesOpt) {
     final List<FileStatus> newFiles;
     if (filesOpt.isPresent()) {
       newFiles = filesOpt.get();
@@ -655,8 +568,7 @@ public class SnapshotManager {
     } else if (newFiles.isEmpty()) {
       // The directory may be deleted and recreated and we may have stale state in our
       // DeltaLog singleton, so try listing from the first version
-      return getLogSegmentAtOrBeforeVersion(
-          engine, Optional.empty(), versionToLoadOpt, tableCommitHandlerOpt);
+      return getLogSegmentForVersion(engine, Optional.empty(), versionToLoadOpt);
     }
 
     Tuple2<List<FileStatus>, List<FileStatus>> checkpointsAndDeltas =
@@ -749,10 +661,10 @@ public class SnapshotManager {
                         .map(x -> new Path(x.getPath()).getName())
                         .toArray())));
 
-    final LinkedList<Long> deltaVersionsAfterCheckpoint =
+    final List<Long> deltaVersionsAfterCheckpoint =
         deltasAfterCheckpoint.stream()
             .map(fileStatus -> FileNames.deltaVersion(new Path(fileStatus.getPath())))
-            .collect(Collectors.toCollection(LinkedList::new));
+            .collect(Collectors.toList());
 
     logDebug(
         () -> format("deltaVersions: %s", Arrays.toString(deltaVersionsAfterCheckpoint.toArray())));
@@ -760,7 +672,7 @@ public class SnapshotManager {
     final long newVersion =
         deltaVersionsAfterCheckpoint.isEmpty()
             ? newCheckpointOpt.get().version
-            : deltaVersionsAfterCheckpoint.getLast();
+            : ListUtils.getLast(deltaVersionsAfterCheckpoint);
 
     // There should be a delta file present for the newVersion that we are loading
     // (Even if `deltasAfterCheckpoint` is empty, `deltas` should not be)
@@ -771,7 +683,7 @@ public class SnapshotManager {
     }
 
     versionToLoadOpt
-        .filter(v -> v < newVersion)
+        .filter(v -> v != newVersion)
         .ifPresent(
             v -> {
               throw DeltaErrors.versionAfterLatestCommit(tablePath.toString(), v, newVersion);
@@ -782,22 +694,24 @@ public class SnapshotManager {
       // If we have deltas after the checkpoint, the first file should be 1 greater than our
       // last checkpoint version. If no checkpoint is present, this means the first delta file
       // should be version 0.
-      if (deltaVersionsAfterCheckpoint.getFirst() != newCheckpointVersion + 1) {
+      if (deltaVersionsAfterCheckpoint.get(0) != newCheckpointVersion + 1) {
         throw new InvalidTableException(
             tablePath.toString(),
             String.format(
                 "Unable to reconstruct table state: missing log file for version %s",
                 newCheckpointVersion + 1));
       }
+
+      verifyDeltaVersions(
+          deltaVersionsAfterCheckpoint,
+          Optional.of(newCheckpointVersion + 1),
+          versionToLoadOpt,
+          tablePath);
+
       logger.info(
           "Verified delta files are contiguous from version {} to {}",
           newCheckpointVersion + 1,
           newVersion);
-      verifyDeltaVersions(
-          deltaVersionsAfterCheckpoint,
-          Optional.of(newCheckpointVersion + 1),
-          Optional.of(newVersion),
-          tablePath);
     }
 
     final long lastCommitTimestamp = deltas.get(deltas.size() - 1).getModificationTime();
